syntax = "proto3";
package pryzm.icstaking.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "ibc/core/client/v1/client.proto";

option go_package = "github.com/pryzm-finance/pryzm-core/x/icstaking/types/v1";

message MultiSigConnection {
  // identifier for a multi-sig connection
  string id = 1;

  // the operator address of the multi-sig connection on Pryzm, allowed to acknowledge packets
  // this address must be a multi-sig to be secure
  string operator = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // the last packet sequence sent on this connection
  uint64 last_sequence = 3;

  // the latest height of host chain known on Pryzm
  // this is the host chain block when the last packet is executed and Pryzm have got the acknowledgment
  ibc.core.client.v1.Height latest_host_height = 4 [(gogoproto.nullable) = false];
}

message MultiSigPacket {
  string connection_id = 1;

  // the sequence number of the packet, used to make sure that the messages are executed with proper ordering
  uint64 sequence = 2;

  // messages that must be executed on the host chain
  repeated google.protobuf.Any messages = 3;
}

// This is copied from ibc-go
message Acknowledgement {
  // response contains either a result or an error and must be non-empty
  oneof response {
    bytes result = 21;
    string error = 22;
  }
}
